@@ -3,6 +3,8 @@ Version 1.8.4
        fails if the file was deleted. (Sergey Azarkevich)
 - BUG: Issue #585: repo browser doesn't refresh directory
        browser when clicking "up a directory". (Stefan)
+- NEW: Issue #586: Option to disable SVNParentPath
+       handling in repo browser. (Stefan)
 
 Version 1.8.3
 - BUG: Issue #546: "Restore after commit" fails
